<resources>
    <string name="app_name">RecyclerCRUD</string>
    <string name="name">name</string>
    <string name="rollno">Roll no</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="create_a_account">Create a Account</string>
    <string name="register">Register</string>
    <string name="mobile">Mobile No</string>
    <string name="signout">SignOut</string>
    <string name="googlesignin">Google SignIn</string>



    <string name="facebook_app_id">892533082015971</string>
    <string name="fb_login_protocol_scheme">fb892533082015971</string>
    <string name="facebook_client_token">5258149f238e2649520b7b893b0512c8</string>
    <string name="channel_name">Notify Channel</string>
    <string name="channel_description">Notification For Testing</string>
    <string name="entertosearch">Enter to Search</string>
</resources>