<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:id="@+id/tvName"
        android:text="@string/name"
        android:textSize="@dimen/size_30sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_below="@+id/tvName"
        android:id="@+id/etName"
        android:textSize="@dimen/size_30sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_below="@+id/etName"
        android:id="@+id/tvRollNo"
        android:text="@string/rollno"
        android:inputType="textPersonName"
        android:textSize="@dimen/size_25sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:id="@+id/etRollNo"
        android:layout_below="@+id/tvRollNo"
        android:inputType="number"
        android:digits="1234567890"
        android:textSize="@dimen/size_30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"

        android:layout_marginStart="@dimen/margin_40dp"
        android:layout_below="@+id/etRollNo">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEdit"
            android:layout_margin="@dimen/margin_10dp"
            android:text="@string/edit"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete"
            android:layout_toEndOf="@id/btnEdit"
            android:layout_margin="@dimen/margin_10dp"
            android:text="@string/delete"/>
    </RelativeLayout>
</RelativeLayout>